# xl_slam

./: .gitignore  README.md
ch13_mapping/dense_monocular/: dense_mapping.cpp
ch13_mapping/dense_monocular/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  dense_mapping
ch7_feature_method/: pose_estimation_3d2d.cpp
ch7_feature_method/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  feature_extraction  pose_estimation_2d2d  pose_estimation_3d2d  pose_estimation_3d3d  triangulation
ch8_direct_method/LKFlow/: useLK.cpp
ch8_direct_method/LKFlow/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  useLK
ch8_direct_method/data/: associate_LKflow.txt
ch8_direct_method/directMethod/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  direct_semidense  direct_sparse
final_hw_vio/源代码/: 关于代码完整运行说明.txt  启动VI robslam.txt
final_hw_vio/源代码/LearnVIORB-RT/: CMakeLists.txt
final_hw_vio/源代码/LearnVIORB-RT/config/: euroc.yaml
final_hw_vio/源代码/LearnVIORB-RT/include/: System.h
final_hw_vio/源代码/LearnVIORB-RT/pyplotscripts/: convert_euroc_csv (复件).py  convert_euroc_csv.py  plotinit.py  plotnavstate.py
final_hw_vio/源代码/LearnVIORB-RT/src/: System.cc
final_hw_vio/源代码/数据结果 (20180520)/: KeyFrameNavStateTrajectory.txt  Pw.eps  Rwi.txt  Vw.eps  biasa.eps  biasa.txt  biasacc.eps  biasg.eps  biasg.txt  biasgyr.eps  condnum.eps  condnum.txt  gw.txt  scale.eps  scale.txt
final_project/proj_01/src/: frame.cpp
final_project/proj_02/: log.txt
final_project/proj_02/.kdev4/: proj_02.kdev4
final_project/proj_02/config/: kitti_vo_00.yaml  tum_rgbd.yaml
final_project/proj_02/include/myslam/: mappoint.h
final_project/proj_02/src/: camera.cpp
final_project/proj_02/test/: run_vo.cpp
final_project/proj_03/: CMakeLists.txt  log.txt  proj_02.kdev4
final_project/proj_03/config/: default.yaml  tum_rgbd.yaml
final_project/proj_03/include/myslam/: camera.h  common_include.h  g2o_types.h
final_project/proj_03/src/: visual_odometry.cpp
hw1/: CMakeLists.txt
hw2/eigenMatrix/: CMakeLists.txt  eigenMatrix.cpp
hw2/eigenPose/: CMakeLists.txt  eigenPose.cpp
hw3/compute_error/: CMakeLists.txt  compute_error.cpp  compute_error.kdev4
hw3/compute_error/.kdev4/: compute_error.kdev4
hw3/compute_error/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  compute_error
hw3/draw_trajectory/: draw_trajectory.cpp  draw_trajectory.kdev4  ldso_euroc_v1_01.txt
hw3/draw_trajectory/.kdev4/: draw_trajectory.kdev4
hw3/draw_trajectory/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  draw_trajectory
hw3/draw_trajectory/build3/: CMakeCache.txt  Makefile  cmake_install.cmake  draw_trajectory
hw3/pangolin_practice/: CMakeLists.txt  CMakeLists.txt~  pangolin_practice.cpp
hw3/test_norm/: CMakeLists.txt  test_norm.cpp
hw4/disparity/: CMakeLists.txt  CMakeLists.txt~  disparity.cpp
hw4/disparity/.kdev4/: disparity.kdev4
hw4/disparity/build2/: CMakeCache.txt  Makefile  cmake_install.cmake
hw4/disparity/build3/: CMakeCache.txt  Makefile  cmake_install.cmake
hw4/gaussnewton/: CMakeLists.txt  gaussnewton.cpp  gaussnewton.kdev4
hw4/gaussnewton/.kdev4/: gaussnewton.kdev4
hw4/test_type_length/: CMakeLists.txt  test_type_length.cpp
hw4/undistort_image/: .undistort_image.cpp.kate-swp  CMakeLists.txt  undistort_image.cpp  undistort_image.kdev4
hw4/undistort_image/.kdev4/: undistort_image.kdev4
hw5/E2Rt/: CMakeLists.txt  E2Rt.cpp
hw5/GN_BA/: CMakeLists.txt  GN_BA.cpp
hw5/computeORB/: CMakeLists.txt  CMakeLists.txt~  computeORB.cpp
hw5/icp_align/: CMakeLists.txt  CMakeLists.txt~  icp_align.cpp  icp_align.cpp~
hw6/direct_method/: CMakeLists.txt  direct_method.cpp  tracked_poses_result.txt  tracked_poses_result_bk.txt
hw6/direct_method/bk_poses/: tracked_poses_result.txt
hw6/direct_method/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  direct_method
hw6/direct_method/build3/: CMakeCache.txt  Makefile  cmake_install.cmake  direct_method
hw6/optical_flow/: CMakeLists.txt  optical_flow.cpp
hw6/optical_flow/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  optical_flow
hw7/directBA/: CMakeLists.txt  directBA.cpp
hw7/directBA/build3/: CMakeCache.txt  Makefile  cmake_install.cmake
hw7/direct_noBA/: CMakeLists.txt  direct_noBA.cpp
hw7/g2o_custombundle/: g2o_bal_class.h
ref_hw_1_7/hw1/hw1_ws/include/: hello.h
ref_hw_1_7/hw2/hw2_ws/useGeometry/: CMakeLists.txt
ref_hw_1_7/hw3/hw3_ws/l3-6draw_trajectory/: CMakeLists.txt
ref_hw_1_7/hw3/hw3_ws/l3-7traceError/: CMakeLists.txt
ref_hw_1_7/hw4/hw4_ws/l4-2-undistort_image/: CMakeLists.txt  undistort_image.cpp
ref_hw_1_7/hw4/hw4_ws/l4-5-Gauss-Newton/: CMakeLists.txt
ref_hw_1_7/hw5/hw5_ws/l5-2-orb-detect/: CMakeLists.txt  computeORB.cpp
ref_hw_1_7/hw6/hw6_ws/l6-2-OptFlow/: optical_flow.cpp
ref_hw_1_7/hw6/hw6_ws/l6-3-direct/build2/: CMakeCache.txt  Makefile  cmake_install.cmake
ref_hw_1_7/hw6/hw6_ws/l6-3-direct/build3/: CMakeCache.txt  Makefile  cmake_install.cmake
ref_hw_1_7/hw7/hw7_ws/l7-3-direct-ba2/: directBA.cpp
ref_hw_1_7/hw7/hw7_ws/l7-3-direct-ba2/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  direct-ba
ref_hw_1_7/第一讲/源码/: CMakeLists.txt  useHello.c
ref_hw_1_7/第一讲/源码/src/: CMakeLists.txt  CMakeLists.txt~  hello.c
ref_hw_1_7/第三讲/源码/l3-7traceError/: traceError.cpp
ref_hw_1_7/第二讲/源码/useEigen/: CMakeLists.txt  useEigen.cpp
ref_hw_1_7/第二讲/源码/useGeometry/: useGeometry.cpp
ref_hw_1_7/第五讲/源码/l5-3-essential/: CMakeLists.txt
ref_hw_1_7/第四讲/源码/l4-3-disparity/: CMakeLists.txt  disparity.cpp
ref_hw_1_7/第四讲/源码/l4-5-Gauss-Newton/: gaussnewton.cpp
