CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(BUILD_TYPE Release)
#SET(BUILD_TYPE Debug)

PROJECT(orb-detect)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2")
FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

ADD_EXECUTABLE(${PROJECT_NAME} computeORB.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
	${OpenCV_LIBS})

MESSAGE(STATUS "OpenCV INCLUDE: ${OpenCV_INCLUDE_DIRS}\n LIBS: ${OpenCV_LIBS}" )
