ADD_LIBRARY(hello SHARED hello.c)

INCLUDE_DIRECTORIES(../include/)
MESSAGE(STATUS "2 BIN DIR: " ${PROJECT_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

INSTALL(TARGETS hello 
	LIBRARY DESTINATION /usr/local/lib)

INSTALL(FILES ../include/hello.h 
	DESTINATION /usr/local/include)
